--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,11 @@
 			<version>7.0.2</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>5.0.1</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<dependency>
